# term-proxy

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
.superpowers/sdd/: task-2-report.md  task-final-review-fix-report.md
docs/: README.md
docs/superpowers/plans/: 2026-06-26-github-release-build.md  2026-06-26-project-foundation.md  2026-06-27-http-proxy-merge.md  2026-06-27-proxy-copy-command-and-ipv4-input.md
docs/superpowers/specs/: 2026-06-26-github-release-build-design.md  2026-06-26-term-proxy-design.md  2026-06-27-http-proxy-merge-design.md  2026-06-27-proxy-copy-command-and-ipv4-input-design.md
scripts/: update-version.mjs  version-utils.mjs  version-utils.test.mjs
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  mod.rs  proxy.rs
src-tauri/src/models/: app.rs  proxy.rs
src-tauri/src/services/: app.rs  proxy.rs
src-tauri/src/shell/: import_scanner.rs  mod.rs  profile.rs  script.rs
src-tauri/src/storage/: managed_files.rs  mod.rs  proxy_store.rs
src/app/: App.test.tsx  App.tsx  styles.css
src/features/import/: ImportCandidates.tsx  ImportNotice.tsx
src/features/proxies/: ProxyDashboard.test.tsx  ProxyDashboard.tsx  (+2 more)
src/test/: setup.ts
(+21 files in other folders)
