[package]
name = "term-proxy"
version = "0.1.0"
description = "Terminal proxy manager"
authors = ["Term Proxy contributors"]
edition = "2021"

[lib]
name = "term_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
