[package]
name = "term-proxy"
version = "1.2.3"
description = "Terminal proxy manager"
authors = ["Term Proxy contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "term_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
